feat: streaming!
