# server/connect/number/v1/list.pb.go
@@ -157,12 +157,11 @@ func (b0 Item_builder) Build() *Item {
 
 type ListRequest struct {
 	state                  protoimpl.MessageState `protogen:"opaque.v1"`
-	xxx_hidden_Cursor      int64                  `protobuf:"varint,1,opt,name=cursor"`
-	xxx_hidden_Name        *string                `protobuf:"bytes,2,opt,name=name"`
-	xxx_hidden_Min         uint32                 `protobuf:"varint,3,opt,name=min"`
-	xxx_hidden_Max         uint32                 `protobuf:"varint,4,opt,name=max"`
-	xxx_hidden_Start       *timestamppb.Timestamp `protobuf:"bytes,5,opt,name=start"`
-	xxx_hidden_End         *timestamppb.Timestamp `protobuf:"bytes,6,opt,name=end"`
+	xxx_hidden_Name        *string                `protobuf:"bytes,1,opt,name=name"`
+	xxx_hidden_Min         uint32                 `protobuf:"varint,2,opt,name=min"`
+	xxx_hidden_Max         uint32                 `protobuf:"varint,3,opt,name=max"`
+	xxx_hidden_Start       *timestamppb.Timestamp `protobuf:"bytes,4,opt,name=start"`
+	xxx_hidden_End         *timestamppb.Timestamp `protobuf:"bytes,5,opt,name=end"`
 	XXX_raceDetectHookData protoimpl.RaceDetectHookData
 	XXX_presence           [1]uint32
 	unknownFields          protoimpl.UnknownFields
@@ -192,13 +191,6 @@ func (x *ListRequest) ProtoReflect() protoreflect.Message {
 		return ms
 	}
 	return mi.MessageOf(x)
-}
-
-func (x *ListRequest) GetCursor() int64 {
-	if x != nil {
-		return x.xxx_hidden_Cursor
-	}
-	return 0
 }
 
 func (x *ListRequest) GetName() string {
@@ -239,24 +231,19 @@ func (x *ListRequest) GetEnd() *timestamppb.Timestamp {
 	return nil
 }
 
-func (x *ListRequest) SetCursor(v int64) {
-	x.xxx_hidden_Cursor = v
-	protoimpl.X.SetPresent(&(x.XXX_presence[0]), 0, 6)
-}
-
 func (x *ListRequest) SetName(v string) {
 	x.xxx_hidden_Name = &v
-	protoimpl.X.SetPresent(&(x.XXX_presence[0]), 1, 6)
+	protoimpl.X.SetPresent(&(x.XXX_presence[0]), 0, 5)
 }
 
 func (x *ListRequest) SetMin(v uint32) {
 	x.xxx_hidden_Min = v
-	protoimpl.X.SetPresent(&(x.XXX_presence[0]), 2, 6)
+	protoimpl.X.SetPresent(&(x.XXX_presence[0]), 1, 5)
 }
 
 func (x *ListRequest) SetMax(v uint32) {
 	x.xxx_hidden_Max = v
-	protoimpl.X.SetPresent(&(x.XXX_presence[0]), 3, 6)
+	protoimpl.X.SetPresent(&(x.XXX_presence[0]), 2, 5)
 }
 
 func (x *ListRequest) SetStart(v *timestamppb.Timestamp) {
@@ -267,32 +254,25 @@ func (x *ListRequest) SetEnd(v *timestamppb.Timestamp) {
 	x.xxx_hidden_End = v
 }
 
-func (x *ListRequest) HasCursor() bool {
+func (x *ListRequest) HasName() bool {
 	if x == nil {
 		return false
 	}
 	return protoimpl.X.Present(&(x.XXX_presence[0]), 0)
 }
 
-func (x *ListRequest) HasName() bool {
+func (x *ListRequest) HasMin() bool {
 	if x == nil {
 		return false
 	}
 	return protoimpl.X.Present(&(x.XXX_presence[0]), 1)
 }
 
-func (x *ListRequest) HasMin() bool {
-	if x == nil {
-		return false
-	}
-	return protoimpl.X.Present(&(x.XXX_presence[0]), 2)
-}
-
 func (x *ListRequest) HasMax() bool {
 	if x == nil {
 		return false
 	}
-	return protoimpl.X.Present(&(x.XXX_presence[0]), 3)
+	return protoimpl.X.Present(&(x.XXX_presence[0]), 2)
 }
 
 func (x *ListRequest) HasStart() bool {
@@ -309,23 +289,18 @@ func (x *ListRequest) HasEnd() bool {
 	return x.xxx_hidden_End != nil
 }
 
-func (x *ListRequest) ClearCursor() {
-	protoimpl.X.ClearPresent(&(x.XXX_presence[0]), 0)
-	x.xxx_hidden_Cursor = 0
-}
-
 func (x *ListRequest) ClearName() {
-	protoimpl.X.ClearPresent(&(x.XXX_presence[0]), 1)
+	protoimpl.X.ClearPresent(&(x.XXX_presence[0]), 0)
 	x.xxx_hidden_Name = nil
 }
 
 func (x *ListRequest) ClearMin() {
-	protoimpl.X.ClearPresent(&(x.XXX_presence[0]), 2)
+	protoimpl.X.ClearPresent(&(x.XXX_presence[0]), 1)
 	x.xxx_hidden_Min = 0
 }
 
 func (x *ListRequest) ClearMax() {
-	protoimpl.X.ClearPresent(&(x.XXX_presence[0]), 3)
+	protoimpl.X.ClearPresent(&(x.XXX_presence[0]), 2)
 	x.xxx_hidden_Max = 0
 }
 
@@ -340,32 +315,27 @@ func (x *ListRequest) ClearEnd() {
 type ListRequest_builder struct {
 	_ [0]func() // Prevents comparability and use of unkeyed literals for the builder.
 
-	Cursor *int64
-	Name   *string
-	Min    *uint32
-	Max    *uint32
-	Start  *timestamppb.Timestamp
-	End    *timestamppb.Timestamp
+	Name  *string
+	Min   *uint32
+	Max   *uint32
+	Start *timestamppb.Timestamp
+	End   *timestamppb.Timestamp
 }
 
 func (b0 ListRequest_builder) Build() *ListRequest {
 	m0 := &ListRequest{}
 	b, x := &b0, m0
 	_, _ = b, x
-	if b.Cursor != nil {
-		protoimpl.X.SetPresentNonAtomic(&(x.XXX_presence[0]), 0, 6)
-		x.xxx_hidden_Cursor = *b.Cursor
-	}
 	if b.Name != nil {
-		protoimpl.X.SetPresentNonAtomic(&(x.XXX_presence[0]), 1, 6)
+		protoimpl.X.SetPresentNonAtomic(&(x.XXX_presence[0]), 0, 5)
 		x.xxx_hidden_Name = b.Name
 	}
 	if b.Min != nil {
-		protoimpl.X.SetPresentNonAtomic(&(x.XXX_presence[0]), 2, 6)
+		protoimpl.X.SetPresentNonAtomic(&(x.XXX_presence[0]), 1, 5)
 		x.xxx_hidden_Min = *b.Min
 	}
 	if b.Max != nil {
-		protoimpl.X.SetPresentNonAtomic(&(x.XXX_presence[0]), 3, 6)
+		protoimpl.X.SetPresentNonAtomic(&(x.XXX_presence[0]), 2, 5)
 		x.xxx_hidden_Max = *b.Max
 	}
 	x.xxx_hidden_Start = b.Start
@@ -374,14 +344,10 @@ func (b0 ListRequest_builder) Build() *ListRequest {
 }
 
 type ListResponse struct {
-	state                  protoimpl.MessageState `protogen:"opaque.v1"`
-	xxx_hidden_Items       *[]*Item               `protobuf:"bytes,1,rep,name=items"`
-	xxx_hidden_TotalCount  int64                  `protobuf:"varint,2,opt,name=total_count,json=totalCount"`
-	xxx_hidden_NextCursor  int64                  `protobuf:"varint,3,opt,name=next_cursor,json=nextCursor"`
-	XXX_raceDetectHookData protoimpl.RaceDetectHookData
-	XXX_presence           [1]uint32
-	unknownFields          protoimpl.UnknownFields
-	sizeCache              protoimpl.SizeCache
+	state           protoimpl.MessageState `protogen:"opaque.v1"`
+	xxx_hidden_Item *Item                  `protobuf:"bytes,1,opt,name=item"`
+	unknownFields   protoimpl.UnknownFields
+	sizeCache       protoimpl.SizeCache
 }
 
 func (x *ListResponse) Reset() {
@@ -409,88 +375,39 @@ func (x *ListResponse) ProtoReflect() protoreflect.Message {
 	return mi.MessageOf(x)
 }
 
-func (x *ListResponse) GetItems() []*Item {
+func (x *ListResponse) GetItem() *Item {
 	if x != nil {
-		if x.xxx_hidden_Items != nil {
-			return *x.xxx_hidden_Items
-		}
+		return x.xxx_hidden_Item
 	}
 	return nil
 }
 
-func (x *ListResponse) GetTotalCount() int64 {
-	if x != nil {
-		return x.xxx_hidden_TotalCount
-	}
-	return 0
+func (x *ListResponse) SetItem(v *Item) {
+	x.xxx_hidden_Item = v
 }
 
-func (x *ListResponse) GetNextCursor() int64 {
-	if x != nil {
-		return x.xxx_hidden_NextCursor
-	}
-	return 0
-}
-
-func (x *ListResponse) SetItems(v []*Item) {
-	x.xxx_hidden_Items = &v
-}
-
-func (x *ListResponse) SetTotalCount(v int64) {
-	x.xxx_hidden_TotalCount = v
-	protoimpl.X.SetPresent(&(x.XXX_presence[0]), 1, 3)
-}
-
-func (x *ListResponse) SetNextCursor(v int64) {
-	x.xxx_hidden_NextCursor = v
-	protoimpl.X.SetPresent(&(x.XXX_presence[0]), 2, 3)
-}
-
-func (x *ListResponse) HasTotalCount() bool {
+func (x *ListResponse) HasItem() bool {
 	if x == nil {
 		return false
 	}
-	return protoimpl.X.Present(&(x.XXX_presence[0]), 1)
+	return x.xxx_hidden_Item != nil
 }
 
-func (x *ListResponse) HasNextCursor() bool {
-	if x == nil {
-		return false
-	}
-	return protoimpl.X.Present(&(x.XXX_presence[0]), 2)
-}
-
-func (x *ListResponse) ClearTotalCount() {
-	protoimpl.X.ClearPresent(&(x.XXX_presence[0]), 1)
-	x.xxx_hidden_TotalCount = 0
-}
-
-func (x *ListResponse) ClearNextCursor() {
-	protoimpl.X.ClearPresent(&(x.XXX_presence[0]), 2)
-	x.xxx_hidden_NextCursor = 0
+func (x *ListResponse) ClearItem() {
+	x.xxx_hidden_Item = nil
 }
 
 type ListResponse_builder struct {
 	_ [0]func() // Prevents comparability and use of unkeyed literals for the builder.
 
-	Items      []*Item
-	TotalCount *int64
-	NextCursor *int64
+	Item *Item
 }
 
 func (b0 ListResponse_builder) Build() *ListResponse {
 	m0 := &ListResponse{}
 	b, x := &b0, m0
 	_, _ = b, x
-	x.xxx_hidden_Items = &b.Items
-	if b.TotalCount != nil {
-		protoimpl.X.SetPresentNonAtomic(&(x.XXX_presence[0]), 1, 3)
-		x.xxx_hidden_TotalCount = *b.TotalCount
-	}
-	if b.NextCursor != nil {
-		protoimpl.X.SetPresentNonAtomic(&(x.XXX_presence[0]), 2, 3)
-		x.xxx_hidden_NextCursor = *b.NextCursor
-	}
+	x.xxx_hidden_Item = b.Item
 	return m0
 }
 
@@ -502,22 +419,17 @@ const file_number_v1_list_proto_rawDesc = "" +
 	"\x04Item\x128\n" +
 	"\ttimestamp\x18\x01 \x01(\v2\x1a.google.protobuf.TimestampR\ttimestamp\x12\x1d\n" +
 	"\x04name\x18\x02 \x01(\tB\t\xbaH\x06r\x04\x10\x01\x182R\x04name\x12#\n" +
-	"\x06number\x18\x03 \x01(\rB\v\xbaH\b*\x06\x18\xc0\x84=(\x00R\x06number\"\xbb\x03\n" +
-	"\vListRequest\x12\x16\n" +
-	"\x06cursor\x18\x01 \x01(\x03R\x06cursor\x12\x1d\n" +
-	"\x04name\x18\x02 \x01(\tB\t\xbaH\x06r\x04\x10\x00\x182R\x04name\x12\x1d\n" +
-	"\x03min\x18\x03 \x01(\rB\v\xbaH\b*\x06\x18\xc0\x84=(\x00R\x03min\x12\x1d\n" +
-	"\x03max\x18\x04 \x01(\rB\v\xbaH\b*\x06\x18\xc0\x84=(\x00R\x03max\x120\n" +
-	"\x05start\x18\x05 \x01(\v2\x1a.google.protobuf.TimestampR\x05start\x12,\n" +
-	"\x03end\x18\x06 \x01(\v2\x1a.google.protobuf.TimestampR\x03end:\xd6\x01\xbaH\xd2\x01\x1ag\n" +
+	"\x06number\x18\x03 \x01(\rB\v\xbaH\b*\x06\x18\xc0\x84=(\x00R\x06number\"\xa3\x03\n" +
+	"\vListRequest\x12\x1d\n" +
+	"\x04name\x18\x01 \x01(\tB\t\xbaH\x06r\x04\x10\x00\x182R\x04name\x12\x1d\n" +
+	"\x03min\x18\x02 \x01(\rB\v\xbaH\b*\x06\x18\xc0\x84=(\x00R\x03min\x12\x1d\n" +
+	"\x03max\x18\x03 \x01(\rB\v\xbaH\b*\x06\x18\xc0\x84=(\x00R\x03max\x120\n" +
+	"\x05start\x18\x04 \x01(\v2\x1a.google.protobuf.TimestampR\x05start\x12,\n" +
+	"\x03end\x18\x05 \x01(\v2\x1a.google.protobuf.TimestampR\x03end:\xd6\x01\xbaH\xd2\x01\x1ag\n" +
 	"\x0fend_after_start\x12\x17End must be after start\x1a;!has(this.end) || !has(this.start) || this.end > this.start\x1ag\n" +
-	"\x11min_less_than_max\x12\x19Min must be less than max\x1a7!has(this.min) || !has(this.max) || this.min < this.max\"w\n" +
-	"\fListResponse\x12%\n" +
-	"\x05items\x18\x01 \x03(\v2\x0f.number.v1.ItemR\x05items\x12\x1f\n" +
-	"\vtotal_count\x18\x02 \x01(\x03R\n" +
-	"totalCount\x12\x1f\n" +
-	"\vnext_cursor\x18\x03 \x01(\x03R\n" +
-	"nextCursorB\xa1\x01\n" +
+	"\x11min_less_than_max\x12\x19Min must be less than max\x1a7!has(this.min) || !has(this.max) || this.min < this.max\"3\n" +
+	"\fListResponse\x12#\n" +
+	"\x04item\x18\x01 \x01(\v2\x0f.number.v1.ItemR\x04itemB\xa1\x01\n" +
 	"\rcom.number.v1B\tListProtoP\x01Z@github.com/spotdemo4/trevstack/server/connect/number/v1;numberv1\xa2\x02\x03NXX\xaa\x02\tNumber.V1\xca\x02\tNumber\\V1\xe2\x02\x15Number\\V1\\GPBMetadata\xea\x02\n" +
 	"Number::V1b\beditionsp\xe9\a"
 
@@ -532,7 +444,7 @@ var file_number_v1_list_proto_depIdxs = []int32{
 	3, // 0: number.v1.Item.timestamp:type_name -> google.protobuf.Timestamp
 	3, // 1: number.v1.ListRequest.start:type_name -> google.protobuf.Timestamp
 	3, // 2: number.v1.ListRequest.end:type_name -> google.protobuf.Timestamp
-	0, // 3: number.v1.ListResponse.items:type_name -> number.v1.Item
+	0, // 3: number.v1.ListResponse.item:type_name -> number.v1.Item
 	4, // [4:4] is the sub-list for method output_type
 	4, // [4:4] is the sub-list for method input_type
 	4, // [4:4] is the sub-list for extension type_name
